1998-05-18  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gncal-full-day.c (layout_children): Implemented ultra-cool
	layout for the events that share the same time range.  Gals and
	guys you can now drop Outlook on the recycle bin.  

	Which reminds me.  We do not have a recycle bin.  How could that
	happen in a project as cool as this one?  Someone explain this to
	me. 

1998-05-18  Federico Mena  <federico@nuclecu.unam.mx>

	* gncal-full-day.c (paint_back): Eliminated unnecessary border repainting.

Sun May 17 17:55:03 1998  Havoc Pennington  <hp@pobox.com>

	* gncal-todo.c (simple_todo_editor): Close dialog when return is pressed.

1998-05-15  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-cal.c (mark_gtk_calendar_day): Bug free version of the
	range computation in place. 

	* gncal-year-view.c (year_view_mark_day): Use the same new version
	of the range computation here. 

	* calobj.c (ical_object_generate_events): Fix the begin/end
	condition.  

1998-05-14  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* timeutil.c (isodate_from_time_t): Do not add the spurious
	padding. 

	* calobj.c (store_date_list): Bug fix:  I was using the wrong
	pointer when saving the exception date list. 
	(set_date_list): Bug fix:  load correctly the complete exception
	date list. 
	(set_date_list): Use ',' for the exception date separator as the
	versit people can not get their standard right. 

	* gncal-full-day.c (unrecur_appointment): Support for making an
	existing recurrent event `movable' for a day.

	* calobj.c (ical_object_add_exdate): New routine, used to add
	exception dates. 
	(ical_object_duplicate): New routine:  used to do the magic
	recur->no-recur event.

1998-05-08  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gncal-full-day.c (new_appointment): Use gtk_calendar freeze/thaw

	* gncal-year-view.c (gncal_year_view_set_year): Use gtkcalendar freeze/thaw. 

	* eventedit.c (event_editor_init): Use gnome_dialog_set_close to
	avoid the ugly warning. 
